# Ejercicio-ROS2

./: .gitignore  Dockerfile.dev  LICENSE  README.md  commands.txt  x
prueba/: package.xml  setup.py
prueba/prueba/: prueba.py
src/auria_msgs/: CMakeLists.txt  package.xml
src/environment/: package.xml  setup.py
src/environment/environment/: car.py  conos.csv  environment.py
src/environment/launch/: launch_env.py
src/environment/tracks/: acceleration.csv  circular.csv  small_track.csv
