<package format="3">
  <name>auria_msgs</name>
  <version>0.1.0</version>
  <description>Custom messages for Auria projects</description>
  <maintainer email="javivi004.ou@gmail.com">Javier Pérez Robles</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
